<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewPlaceActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/ic_image_black_24dp"
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/place_name"
            android:text="@string/place_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textStyle="italic"
            android:textSize="16sp"
            android:id="@+id/place_address"
            android:text="@string/place_addr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textStyle="bold"
            android:textSize="18sp"
            android:id="@+id/place_open_hour"
            android:text="@string/open_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RatingBar
            android:id="@+id/rating_bar"
            android:max="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/menu_btn"
            android:text="@string/menu"
            android:drawableStart="@drawable/ic_menu_white_24dp"
            android:drawablePadding="5dp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    </LinearLayout>
</RelativeLayout>