<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".RegisterActivity">
    <TextView
        android:textAlignment="center"
        android:text="@string/register_btn"
        android:textSize="25sp"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout_register"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:hint="@string/email_register"
            android:id="@+id/email_register"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        app:passwordToggleEnabled="true"
        android:id="@+id/pwd_layout_register"
        android:layout_below="@id/email_layout_register"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:hint="@string/pwd_register"
            android:id="@+id/pwd_register"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_perm_contact_calendar_white_24dp"
        android:layout_below="@id/pwd_layout_register"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_centerHorizontal="true"
        android:id="@+id/register_btn"
        android:text="@string/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/already_member"
        android:textColor="@color/Dark"
        android:text="@string/already_member"
        android:textAlignment="center"
        android:layout_below="@id/register_btn"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>